--- a/package.json
+++ b/package.json
@@ -3,14 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "devDependencies": {
-    "react-scripts": "0.8.5"
+    "react-scripts": "^1.1.4"
   },
   "dependencies": {
-    "antd": "^2.6.3",
-    "cycle-react": "^4.0.0",
-    "react": "^15.4.2",
-    "react-dom": "^15.4.2",
-    "rx": "^4.1.0"
+    "antd": "^3.4.1",
+    "cycle-react": "^6.0.1",
+    "react": "^16.3.2",
+    "react-dom": "^16.3.2",
+    "rxjs": "^5.5.10"
   },
   "scripts": {
     "start": "react-scripts start",
