--- a/package.json
+++ b/package.json
@@ -7,9 +7,9 @@
   "author": "Wickramaranga Abeygunawardhana <umstek@live.com>",
   "license": "MIT",
   "scripts": {
-    "start": "parcel index.html --open",
-    "build": "parcel build index.html --out-dir docs",
-    "clean": "rm -rf build docs"
+    "start": "parcel index.html --open --out-dir build",
+    "build": "parcel build index.html --out-dir dist",
+    "clean": "rm -rf build dist"
   },
   "devDependencies": {
     "@babel/core": "^7.4.5",
