--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "license": "MIT",
   "scripts": {
     "start": "parcel index.html --open --out-dir build",
-    "build": "parcel build index.html --out-dir dist",
+    "build": "parcel build index.html --public-url ./ --out-dir dist",
     "clean": "rm -rf build dist"
   },
   "devDependencies": {
